--- a/plus/src/components/problem.css
+++ b/plus/src/components/problem.css
@@ -1,7 +1,7 @@
 .problem {
   width: 100%;
   height: 100vh; /* Full height of the viewport */
-  font-family: 'Roboto';
+  font-family: 'arial';
   animation: fadeIn 1.2s ease-in-out;
   display: flex;
   flex-direction: column;
